--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,8 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "30-31-timer-plugin",
+	"name": "30/31 Timer Plugin",
+	"version": "0.0.1",
+	"description": "I just wanted a customizable length-centered pomodoro timer.",
+	"author": "https://github.com/onecseven",
 	"isDesktopOnly": false
 }
