--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
 		"esbuild": "0.14.47",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
+		"jest": "^29.3.1",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	}
 }
