--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "ts-jest"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@jest/globals": "^29.3.1",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.14.47",
+		"jest": "^29.3.1",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"jest": "^29.3.1",
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"install": "^0.13.0",
+		"npm": "^9.2.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"ts-jest": "^29.0.3"
 	}
 }
