--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"devDependencies": {
 		"@jest/globals": "^29.3.1",
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -29,6 +31,7 @@
 		"npm": "^9.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"ts-jest": "^29.0.3"
+		"ts-jest": "^29.0.3",
+		"zustand": "^4.2.0"
 	}
 }
