--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": false,
+    "jsx": "react",
 	"strictNullChecks": true,
     "lib": [
       "DOM",
@@ -20,5 +21,5 @@
   },
   "include": [
     "**/*.ts"
-  ]
+, "main.tsx"  ]
 }
