we have dudplication w 'primitives' and 'data'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
+    "outDir": "./build",
     "module": "ESNext",
     "target": "ES6",
     "allowJs": true,
@@ -10,7 +11,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
+    "strict": false,
+    "noFallthroughCasesInSwitch": true,
 	"strictNullChecks": true,
     "lib": [
       "DOM",
